[package]
name = "keygraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.1", features = ["advanced", "async-std"] }
rdev = "0.5.0" 
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
tokio = { version = "1.40.0", features = ["full"] }
tungstenite = "0.24.0"


